--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -21,7 +21,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgreSQL": "Host=localhost;Port=5432;Database=FurnitureDB;Username=postgres;Password=MexRulloh01;",
+    "PostgreSQL": "Host=localhost;Port=5432;Database=FurnitureDB;Username=postgres;Password=<your_password>;",
     "RedisConnectionString": "127.0.0.1:6379"
   },
   "Domain": "https://buzruk.uz",
